--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>ioBroker.roomba adapter</title>
+	<title>ioBroker.owntracks adapter</title>
 	
 	<link rel="stylesheet" type="text/css" href="../../css/adapter.css"/>
 	<link rel="stylesheet" type="text/css" href="../../lib/css/materialize.css">
